force-app/main/default/objects/ValueLink_Log__c/ValueLink_Log__c.object-meta.xml
<CustomObject>
    <label>ValueLink Log</label>
    <nameField>
        <displayFormat>VLL-{0000}</displayFormat>
        <label>ValueLink Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ValueLink Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>