force-app/main/default/objects/ValueLink_Log__c/fields/Appraisal_Order__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appraisal Order</label>
    <referenceTo>Appraisal_Order__c</referenceTo>
    <relationshipLabel>ValueLink Logs</relationshipLabel>
    <relationshipName>ValueLink_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>