force-app/main/default/objects/ValueLink_Log__c/fields/Content_Version_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_ID__c</fullName>
    <label>Content Version ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>