force-app/main/default/objects/ValueLink_Log__c/fields/Document_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_File_Name__c</fullName>
    <label>Document File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>