force-app/main/default/objects/ValueLink_Log__c/fields/Document_Folder__c.field-meta.xml
<CustomField>
    <fullName>Document_Folder__c</fullName>
    <label>Document Folder</label>
    <length>80</length>
    <type>Text</type>
</CustomField>