force-app/main/default/objects/ValueLink_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_ID__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Processing_Status__c</columns>
    <columns>Appraisal_Order__c</columns>
    <columns>Transaction__c</columns>
    <columns>Document_File_Name__c</columns>
    <columns>Document_Folder__c</columns>
    <columns>Content_Document_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payload__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>